--- a/mpi/Makefile.in
+++ b/mpi/Makefile.in
@@ -151,7 +151,7 @@ am__define_uniq_tagged_files = \
   done | $(am__uniquify_input)`
 ETAGS = etags
 CTAGS = ctags
-DIST_SUBDIRS = pt2pt collective startup app one-sided
+DIST_SUBDIRS = pt2pt collective startup one-sided
 am__DIST_COMMON = $(srcdir)/Makefile.in
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 am__relativize = \
@@ -301,7 +301,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = pt2pt collective startup app $(am__append_1)
+SUBDIRS = pt2pt collective startup $(am__append_1)
 all: all-recursive
 
 .SUFFIXES:
